crates/murphy-plugin-macros/tests/ui/fail_node_pattern_predicate_question.stderr
error: node_pattern!: predicate name `odd?` is not a valid Rust identifier; `?`/`!` are not allowed in v1
 --> tests/ui/fail_node_pattern_predicate_question.rs:4:1
  |
4 | murphy_plugin_macros::node_pattern!(m, "#odd?");
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `murphy_plugin_macros::node_pattern` (in Nightly builds, run with -Z macro-backtrace for more info)
